--- a/package.json
+++ b/package.json
@@ -7,14 +7,10 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e",
-    "postinstall": "ng build --prod"    
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "^0.11.2",
-    "@angular/cli": "~7.1.1",
-    "@angular/compiler-cli": "~7.1.0",
     "@angular/animations": "~7.1.0",
     "@angular/common": "~7.1.0",
     "@angular/compiler": "~7.1.0",
@@ -30,13 +26,13 @@
     "jquery": "^3.3.1",
     "popper.js": "^1.14.6",
     "rxjs": "~6.3.3",
-    "typescript": "~3.1.6",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    
-    
+    "@angular-devkit/build-angular": "^0.11.2",
+    "@angular/cli": "~7.1.1",
+    "@angular/compiler-cli": "~7.1.0",
     "@angular/language-service": "~7.1.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
@@ -51,6 +47,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
-    "tslint": "~5.11.0"   
+    "tslint": "~5.11.0",
+    "typescript": "~3.1.6"
   }
 }
