--- a/package.json
+++ b/package.json
@@ -3,14 +3,19 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --prod",
+    "preinstall": "npm install -g @angular/cli @angular/compiler-cli typescript"
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "^0.11.2",
+    "@angular/cli": "~7.1.1",
+    "@angular/compiler-cli": "~7.1.0",
     "@angular/animations": "~7.1.0",
     "@angular/common": "~7.1.0",
     "@angular/compiler": "~7.1.0",
@@ -22,17 +27,17 @@
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "express": "^4.16.4",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
+    "path": "^0.12.7",
     "popper.js": "^1.14.6",
     "rxjs": "~6.3.3",
+    "typescript": "~3.1.6",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "^0.11.2",
-    "@angular/cli": "~7.1.1",
-    "@angular/compiler-cli": "~7.1.0",
+  "devDependencies": {    
     "@angular/language-service": "~7.1.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
@@ -47,7 +52,10 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "~3.1.6"
+    "tslint": "~5.11.0"    
+  },
+  "engines": {
+    "node": "10.6.0",
+    "npm": "6.5.0"
   }
 }
