--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "^0.11.2",
+    "@angular-devkit/build-angular": "^0.12.0",
     "@angular/animations": "~7.1.0",
     "@angular/cli": "~7.1.1",
     "@angular/common": "~7.1.0",
@@ -25,17 +25,27 @@
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
     "angular-font-awesome": "^3.1.2",
+    "bcrypt": "^3.0.3",
+    "body-parser": "^1.18.3",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
+    "express-jwt": "^5.3.1",
     "font-awesome": "^4.7.0",
     "heroku": "^7.19.4",
     "heroku-cli": "^7.0.9",
     "jquery": "^3.3.1",
+    "jsonwebtoken": "^8.4.0",
+    "mysql": "github:mysqljs/mysql",
+    "mysql2": "^1.6.4",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "path-to-regexp": "^2.4.0",
     "popper.js": "^1.14.6",
     "rxjs": "~6.3.3",
+    "sequelize": "^4.42.0",
     "tslib": "^1.9.0",
     "typescript": "~3.1.6",
     "zone.js": "~0.8.26"
