--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "^0.12.0",
     "@angular/animations": "~7.1.0",
     "@angular/cli": "~7.1.1",
     "@angular/common": "~7.1.0",
@@ -32,6 +31,7 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-jwt": "^5.3.1",
+    "express-session": "^1.15.6",
     "font-awesome": "^4.7.0",
     "heroku": "^7.19.4",
     "heroku-cli": "^7.0.9",
@@ -53,6 +53,7 @@
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^0.12.1",
     "@angular/language-service": "~7.1.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
